--- a/Moodlens-backend/package.json
+++ b/Moodlens-backend/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1"
   },
   "scripts": {
-  "start": "node server.js"
-},
+    "start": "node server.js"
+  },
   "type": "module"
 }
-  
