--- a/Moodlens-backend/package.json
+++ b/Moodlens-backend/package.json
@@ -8,7 +8,9 @@
     "pdf-parse": "^1.1.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node --watch server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module"
 }
